合并拉取请求 #35
* 用户服务业务代码基本完成（除小程序前端），去除自定义雪花id生成器，改用mp自主生成

* Merge branch 'dev' into feature/release-1.0.0-huahai

* 后端订单服务与票务服务主体内容的完成

* 后端订单服务与票务服务基本完成

* 后端订单服务与票务服务基本完成

* Merge remote-tracking branch 'origin/feature/release-1.0.0-huahai' in…

* Merge remote-tracking branch 'origin/dev' into feature/release-1.0.0-…

* 后端业务服务业务逻辑更改，前端页面完善

* 后端业务服务业务逻辑更改，前端页面完善

* Merge remote-tracking branch 'origin/feature/release-1.0.0-huahai' in…

* Merge remote-tracking branch 'origin/dev' into feature/release-1.0.0-…

* 依赖修改

* Merge branch 'dev' into feature/release-1.0.0-huahai

* 列车服务修改

* Merge remote-tracking branch 'origin/dev' into feature/release-1.0.0-…

* Merge remote-tracking branch 'origin/dev' into feature/release-1.0.0-…

* Merge remote-tracking branch 'origin/feature/release-1.0.0-huahai' in…

* 小程序页面更改

* Merge branch 'dev' into feature/release-1.0.0-huahai

* 需求文档补充

* Merge branch 'dev' into feature/release-1.0.0-huahai

* 列车服务后端业务代码修改

* 列车服务后端业务代码修改

* Merge remote-tracking branch 'origin/feature/release-1.0.0-huahai' in…

* 列车服务修改

* 列车服务修改

* Merge remote-tracking branch 'origin/feature/release-1.0.0-huahai' in…

* Merge remote-tracking branch 'origin/feature/release-1.0.0-huahai' in…

* Merge remote-tracking branch 'origin/feature/release-1.0.0-huahai' in…

* 后端服务及前端后管页面修改

* 后端服务及前端后管页面修改

* Merge remote-tracking branch 'origin/feature/release-1.0.0-huahai' in…

* 后管前端页面更改与nginx配置