@@ -2,6 +2,7 @@ package top.flowerstardream.hcd.trainSeat.biz.service.impl;
 
 import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.collection.CollUtil;
+import cn.hutool.core.util.StrUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
@@ -13,21 +14,30 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import top.flowerstardream.hcd.trainSeat.ao.dto.CalcTicketPriceDTO;
 import top.flowerstardream.hcd.trainSeat.ao.dto.ReserveSeatDTO;
+import top.flowerstardream.hcd.trainSeat.ao.req.RouteREQ;
 import top.flowerstardream.hcd.trainSeat.ao.req.RouteStationsREQ;
+import top.flowerstardream.hcd.trainSeat.ao.req.SortREQ;
 import top.flowerstardream.hcd.trainSeat.ao.res.RouteStationsRES;
+import top.flowerstardream.hcd.trainSeat.biz.mapper.RouteMapper;
 import top.flowerstardream.hcd.trainSeat.biz.mapper.ScheduleMapper;
+import top.flowerstardream.hcd.trainSeat.biz.mapper.StationMapper;
+import top.flowerstardream.hcd.trainSeat.biz.service.IRouteService;
 import top.flowerstardream.hcd.trainSeat.biz.tool.Calculation;
+import top.flowerstardream.hcd.trainSeat.bo.RouteEO;
 import top.flowerstardream.hcd.trainSeat.bo.RouteStationsEO;
 import top.flowerstardream.hcd.tools.result.PageResult;
 import top.flowerstardream.hcd.trainSeat.ao.pqreq.RouteStationsPageQueryREQ;
 import top.flowerstardream.hcd.trainSeat.biz.mapper.RouteStationsMapper;
 import top.flowerstardream.hcd.trainSeat.biz.service.IRouteStationsService;
 import top.flowerstardream.hcd.trainSeat.bo.ScheduleEO;
+import top.flowerstardream.hcd.trainSeat.bo.StationEO;
 
 import java.math.BigDecimal;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
+import static top.flowerstardream.hcd.base.constant.CommonConstant.PAGE_TOTAL;
 import static top.flowerstardream.hcd.tools.exception.ExceptionEnum.*;
 import static top.flowerstardream.hcd.trainSeat.constant.Common.PRICE_EACH_STATION;
 import static top.flowerstardream.hcd.trainSeat.constant.TrainSeatExceptionEnum.*;
@@ -40,7 +50,16 @@ public class IRouteStationsServiceImpl extends ServiceImpl<RouteStationsMapper, 
     private RouteStationsMapper routeStationsMapper;
 
     @Resource
-    private ScheduleMapper scheduleMapper;
+    private RouteMapper routeMapper;
+
+    @Resource
+    private StationMapper stationMapper;
+
+    @Resource
+    private IRouteService routeService;
+
+    @Resource
+    private Calculation calculation;
 
     @Lazy
     @Resource
@@ -57,6 +76,15 @@ public class IRouteStationsServiceImpl extends ServiceImpl<RouteStationsMapper, 
         //判断路线站点存在，存在则中断
         validateRouteStationsIsExist(routeStationsREQ.getRouteId(), routeStationsREQ.getStationId());
 
+        RouteEO routeEO = routeMapper.selectById(routeStationsREQ.getRouteId());
+        if (routeEO == null) {
+            ROUTE_NOT_EXIST.throwException();
+        }
+        if (routeStationsREQ.getInit() &&
+                (routeStationsREQ.getStationSorting() <= 1 ||
+                        routeStationsREQ.getStationSorting() > routeEO.getStationCount())) {
+            INCORRECT_SORTING.throwException();
+        }
 
         RouteStationsEO routeStationsEO = new RouteStationsEO();
         BeanUtil.copyProperties(routeStationsREQ, routeStationsEO);
@@ -64,6 +92,15 @@ public class IRouteStationsServiceImpl extends ServiceImpl<RouteStationsMapper, 
         if (!insert) {
             INSERTION_FAILED.throwException();
         }
+        if (routeStationsREQ.getInit()) {
+            return;
+        }
+
+        RouteREQ route = RouteREQ.builder()
+                .id(routeStationsREQ.getRouteId())
+                .stationCount(routeEO.getStationCount() + 1)
+                .build();
+        routeService.updateRoute(route);
     }
 
 
@@ -74,12 +111,48 @@ public class IRouteStationsServiceImpl extends ServiceImpl<RouteStationsMapper, 
             return;
         }
 
-        //不存在路线站点占用
+        // 查询要删除的路线站点信息，用于后续更新排序
+        List<RouteStationsEO> toDeleteStations = routeStationsMapper.selectBatchIds(ids);
+        if (CollUtil.isEmpty(toDeleteStations)) {
+            return;
+        }
 
-        //批量删除路线站点
+        // 批量删除路线站点
         boolean delete = self.removeByIds(ids);
         if (!delete) {
             DELETION_FAILED.throwException();
+        }
+
+        // 按路线分组，重新排序剩余站点并更新路线站点总数
+        Map<Long, List<RouteStationsEO>> routeStationsMap = toDeleteStations.stream()
+                .collect(Collectors.groupingBy(RouteStationsEO::getRouteId));
+
+        for (Map.Entry<Long, List<RouteStationsEO>> entry : routeStationsMap.entrySet()) {
+            Long routeId = entry.getKey();
+            List<RouteStationsEO> deletedStationsInRoute = entry.getValue();
+
+            // 获取该路线剩余的所有站点
+            LambdaQueryWrapper<RouteStationsEO> queryWrapper = Wrappers.lambdaQuery();
+            queryWrapper.eq(RouteStationsEO::getRouteId, routeId);
+            queryWrapper.orderByAsc(RouteStationsEO::getStationSorting);
+            List<RouteStationsEO> remainingStations = routeStationsMapper.selectList(queryWrapper);
+
+            // 重新排序
+            for (int i = 0; i < remainingStations.size(); i++) {
+                RouteStationsEO station = remainingStations.get(i);
+                station.setStationSorting(i + 1);
+                routeStationsMapper.updateById(station);
+            }
+
+            // 更新路线的站点总数
+            RouteEO routeEO = routeMapper.selectById(routeId);
+            if (routeEO != null) {
+                RouteREQ routeREQ = RouteREQ.builder()
+                        .id(routeId)
+                        .stationCount(routeEO.getStationCount() - deletedStationsInRoute.size())
+                        .build();
+                routeService.updateRoute(routeREQ);
+            }
         }
     }
 
@@ -98,10 +171,11 @@ public class IRouteStationsServiceImpl extends ServiceImpl<RouteStationsMapper, 
     }
 
     @Override
-    public PageResult<RouteStationsEO> EmployeePageQuery(RouteStationsPageQueryREQ routeStationsPageQueryREQ) {
+    public PageResult<RouteStationsRES> EmployeePageQuery(RouteStationsPageQueryREQ routeStationsPageQueryREQ) {
         //参数校验
         if (routeStationsPageQueryREQ == null) {
             THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
+            return null;
         }
         //设置分页参数默认值
         if (routeStationsPageQueryREQ.getPage() <= 0) {
@@ -113,68 +187,54 @@ public class IRouteStationsServiceImpl extends ServiceImpl<RouteStationsMapper, 
 
         //创建分页对象
         Page<RouteStationsEO> page = new Page<>(routeStationsPageQueryREQ.getPage(), routeStationsPageQueryREQ.getPageSize());
+
         //创建查询条件
         LambdaQueryWrapper<RouteStationsEO> queryWrapper = Wrappers.lambdaQuery();
-
-        //查询条件
-        queryWrapper.eq(RouteStationsEO::getRouteId, routeStationsPageQueryREQ.getRouteId())
-                .eq(RouteStationsEO::getStationId, routeStationsPageQueryREQ.getStationId())
-                .like(RouteStationsEO::getStationSorting, routeStationsPageQueryREQ.getStationSorting());
+        if (routeStationsPageQueryREQ.getRouteId() != null) {
+            queryWrapper.eq(RouteStationsEO::getRouteId, routeStationsPageQueryREQ.getRouteId());
+        }
+        if (routeStationsPageQueryREQ.getStationId() != null) {
+            queryWrapper.eq(RouteStationsEO::getStationId, routeStationsPageQueryREQ.getStationId());
+        }
+        if (routeStationsPageQueryREQ.getStationSorting() != null) {
+            queryWrapper.like(RouteStationsEO::getStationSorting, routeStationsPageQueryREQ.getStationSorting());
+        }
 
         //执行分页查询
         Page<RouteStationsEO> routeStationsResult = routeStationsMapper.selectPage(page, queryWrapper);
 
-        //封装返回结果
-        PageResult<RouteStationsEO> pageResult = new PageResult<>();
-        pageResult.setTotal(routeStationsResult.getTotal());
-        pageResult.setRecords(routeStationsResult.getRecords());
-        return pageResult;
+        List<RouteStationsEO> records = routeStationsResult.getRecords();
+        // 提取所有路线ID和站点ID
+        List<Long> recordsRouteIds = records.stream()
+                .map(RouteStationsEO::getRouteId)
+                .distinct()
+                .toList();
+        List<Long> recordsStationIds = records.stream()
+                .map(RouteStationsEO::getStationId)
+                .distinct()
+                .toList();
 
-    }
+        // 批量查询路线和站点信息
+        List<RouteEO> routeList = recordsRouteIds.isEmpty() ? CollUtil.newArrayList() : routeMapper.selectBatchIds(recordsRouteIds);
+        List<StationEO> stationList = recordsStationIds.isEmpty() ? CollUtil.newArrayList() : stationMapper.selectBatchIds(recordsStationIds);
 
-    @Override
-    public PageResult<RouteStationsRES> UserPageQuery(RouteStationsPageQueryREQ routeStationsPageQueryREQ) {
-        //参数校验
-        if (routeStationsPageQueryREQ == null) {
-            THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
-        }
+        // 构建Map便于快速查找
+        Map<Long, String> routeNameMap = routeList.stream()
+                .collect(Collectors.toMap(RouteEO::getId, RouteEO::getRouteName));
+        Map<Long, String> stationNameMap = stationList.stream()
+                .collect(Collectors.toMap(StationEO::getId, StationEO::getStationName));
 
-        // 设置分页参数默认值
-        if (routeStationsPageQueryREQ.getPage() <= 0) {
-            routeStationsPageQueryREQ.setPage(1);
-        }
-        if (routeStationsPageQueryREQ.getPageSize() <= 0) {
-            routeStationsPageQueryREQ.setPageSize(10);
-        }
-
-        //创建分页对象
-        Page<RouteStationsEO> page = new Page<>(routeStationsPageQueryREQ.getPage(), routeStationsPageQueryREQ.getPageSize());
-        //创建查询条件
-        LambdaQueryWrapper<RouteStationsEO> queryWrapper = Wrappers.lambdaQuery();
-
-        //查询条件
-        queryWrapper.eq(RouteStationsEO::getRouteId, routeStationsPageQueryREQ.getRouteId())
-                .eq(RouteStationsEO::getStationId, routeStationsPageQueryREQ.getStationId())
-                .like(RouteStationsEO::getStationSorting, routeStationsPageQueryREQ.getStationSorting());
-
-
-        //执行分页查询
-        Page<RouteStationsEO> routeStationsPage = routeStationsMapper.selectPage(page, queryWrapper);
-
-        //将EO转换为RES
-        List<RouteStationsRES> resList = routeStationsPage.getRecords().stream()
-                .map(eo -> {
-                    RouteStationsRES res = new RouteStationsRES();
-                    BeanUtil.copyProperties(eo, res);
-                    return res;
-                })
-                .collect(Collectors.toList());
-
+        // 转换为RES对象并设置名称属性
+        List<RouteStationsRES> routeStationsRESList = records.stream()
+            .map(record -> convertToRES(record, routeNameMap, stationNameMap))
+            .toList();
         //封装返回结果
         PageResult<RouteStationsRES> pageResult = new PageResult<>();
-        pageResult.setTotal(routeStationsPage.getTotal());
-        pageResult.setRecords(resList);
-        return pageResult ;
+        Long total = routeStationsMapper.selectCount(Wrappers.lambdaQuery(RouteStationsEO.class));
+        pageResult.setTotal(total > PAGE_TOTAL ? PAGE_TOTAL : total);
+        pageResult.setRecords(routeStationsRESList);
+        return pageResult;
+
     }
 
     /*
@@ -205,26 +265,55 @@ public class IRouteStationsServiceImpl extends ServiceImpl<RouteStationsMapper, 
         if (calcTicketPriceDTO == null) {
             THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
         }
-        Calculation calculation = new Calculation();
 
         return calculation.ticketPriceCalculation(calcTicketPriceDTO);
     }
+
     /**
-     * 外部调用
-     * */
-    public BigDecimal calcTicketPrice(ReserveSeatDTO reserveSeatDTO){
-        //参数校验
-        if (reserveSeatDTO == null) {
+     * 根据id排序路线站点
+     *
+     * @param sortREQ
+     */
+    @Override
+    @Transactional
+    public void sort(SortREQ sortREQ) {
+        // 参数校验
+        if (sortREQ == null || CollUtil.isEmpty(sortREQ.getRouteStationsIds())) {
             THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
         }
-        //Calculation的票价计算传入参数是CalcTicketPriceDTO，俩DTO参数一致，所以直接调用
-        CalcTicketPriceDTO calcTicketPriceDTO = new CalcTicketPriceDTO(
-                reserveSeatDTO.getScheduleId(),
-                reserveSeatDTO.getStartStationId(),
-                reserveSeatDTO.getEndStationId()
-        );
-        Calculation calculation = new Calculation();
-        return calculation.ticketPriceCalculation(calcTicketPriceDTO);
+
+        List<Long> ids = sortREQ.getRouteStationsIds();
+
+        // 批量查询需要更新的路线站点信息
+        List<RouteStationsEO> routeStationsList = routeStationsMapper.selectBatchIds(ids);
+
+        if (CollUtil.isEmpty(routeStationsList)) {
+            return;
+        }
+
+        // 按照传入的ID顺序设置新的排序值
+        for (int i = 0; i < ids.size(); i++) {
+            Long id = ids.get(i);
+            RouteStationsEO routeStationsEO = routeStationsList.stream()
+                    .filter(item -> item.getId().equals(id))
+                    .findFirst()
+                    .orElse(null);
+
+            if (routeStationsEO != null) {
+                routeStationsEO.setStationSorting(i + 1);
+                routeStationsMapper.updateById(routeStationsEO);
+            }
+        }
+    }
+
+    private RouteStationsRES convertToRES(RouteStationsEO routeStationsEO,
+                                     Map<Long, String> routeNameMap,
+                                     Map<Long, String> stationNameMap) {
+        RouteStationsRES res = new RouteStationsRES();
+        BeanUtil.copyProperties(routeStationsEO, res);
+        res.setRouteName(routeNameMap.get(routeStationsEO.getRouteId()));
+        res.setStationName(stationNameMap.get(routeStationsEO.getStationId()));
+        return res;
     }
 
 }
