@@ -2,12 +2,15 @@ package top.flowerstardream.hcd.trainSeat.biz.service.impl;
 
 import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.collection.CollUtil;
+import cn.hutool.core.util.StrUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -16,27 +19,29 @@ import top.flowerstardream.hcd.trainSeat.ao.dto.ReserveSeatDTO;
 import top.flowerstardream.hcd.trainSeat.ao.dto.SeatReservationDTO;
 import top.flowerstardream.hcd.trainSeat.ao.dto.TimeDTO;
 import top.flowerstardream.hcd.trainSeat.ao.pqreq.RealTimeSchedulePageQueryREQ;
+import top.flowerstardream.hcd.trainSeat.ao.req.RealTimeScheduleREQ;
 import top.flowerstardream.hcd.trainSeat.ao.req.ScheduleREQ;
 import top.flowerstardream.hcd.trainSeat.ao.res.RealTimeScheduleRES;
 import top.flowerstardream.hcd.trainSeat.ao.res.ScheduleRES;
 import top.flowerstardream.hcd.trainSeat.biz.mapper.*;
 import top.flowerstardream.hcd.trainSeat.biz.tool.Calculation;
-import top.flowerstardream.hcd.trainSeat.bo.RouteEO;
-import top.flowerstardream.hcd.trainSeat.bo.RouteStationsEO;
-import top.flowerstardream.hcd.trainSeat.bo.ScheduleEO;
-import top.flowerstardream.hcd.trainSeat.bo.SeatReservationEO;
+import top.flowerstardream.hcd.trainSeat.bo.*;
 import top.flowerstardream.hcd.tools.result.PageResult;
 import top.flowerstardream.hcd.trainSeat.ao.pqreq.SchedulePageQueryREQ;
 import top.flowerstardream.hcd.trainSeat.biz.service.IScheduleService;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
+import static top.flowerstardream.hcd.base.constant.CommonConstant.PAGE_TOTAL;
 import static top.flowerstardream.hcd.tools.exception.ExceptionEnum.*;
-import static top.flowerstardream.hcd.trainSeat.constant.TrainSeatExceptionEnum.SCHEDULE_ALREADY_EXISTS;
-import static top.flowerstardream.hcd.trainSeat.constant.TrainSeatExceptionEnum.SCHEDULE_IS_USED;
+import static top.flowerstardream.hcd.trainSeat.constant.BookingStatus.NOT_BOOKED;
+import static top.flowerstardream.hcd.trainSeat.constant.TrainSeatExceptionEnum.*;
 
 @Slf4j
 @Service
@@ -56,24 +61,57 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
     private RouteStationsMapper routeStationsMapper;
 
     @Resource
+    private TrainMapper trainMapper;
+
+    @Resource
+    private Calculation calculation;
+
+    @Resource
     private StationMapper stationMapper;
 
+    @Resource
+    private RouteMapper routeMapper;
+
     @Override
+    @Transactional(rollbackFor = Exception.class)
     public void addSchedule(ScheduleREQ scheduleREQ) {
         //参数校验
         if (scheduleREQ == null) {
             THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
+            return;
         }
 
         //判断班次存在，存在则中断
         validateScheduleIsExist(scheduleREQ.getTrainId(), scheduleREQ.getRouteId(), scheduleREQ.getStartTime());
 
+        //获取列车信息，包括座位总数
+        TrainEO trainEO = trainMapper.selectById(scheduleREQ.getTrainId());
+        if (trainEO == null) {
+            THE_TRAIN_NOT_EXIST.throwException();
+        }
+
         //打包req的属性进入EO，然后插入数据库
         ScheduleEO scheduleEO = new ScheduleEO();
         BeanUtil.copyProperties(scheduleREQ, scheduleEO);
+        scheduleEO.setAvailableTickets(trainEO.getSeatNum()); // 设置余票数量为列车座位数
         boolean insert = self.save(scheduleEO);
         if (!insert) {
             INSERTION_FAILED.throwException();
+        }
+
+        // 为该班次生成对应数量的座位预订记录，初始状态为未预订
+        List<SeatReservationEO> seatReservations = new ArrayList<>();
+        for (int i = 1; i <= trainEO.getSeatNum(); i++) {
+            SeatReservationEO reservation = new SeatReservationEO();
+            reservation.setScheduleId(scheduleEO.getId());
+            reservation.setSeatNum(i);
+            reservation.setBookingStatus(NOT_BOOKED.getValue());
+            seatReservations.add(reservation);
+        }
+        
+        // 批量插入座位预订记录
+        if (CollUtil.isNotEmpty(seatReservations)) {
+            seatReservationMapper.insertBatchSomeColumn(seatReservations);
         }
     }
 
@@ -95,7 +133,7 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
             queryWrapper.eq(SeatReservationEO::getScheduleId,id);
             List<SeatReservationEO> seatReservations = seatReservationMapper.selectList(queryWrapper);
 
-            if (seatReservations != null){
+            if (CollUtil.isNotEmpty(seatReservations)){
                 SCHEDULE_IS_USED.throwException();
             }
 
@@ -124,10 +162,11 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
     }
 
     @Override
-    public PageResult<ScheduleEO> EmployeePageQuery(SchedulePageQueryREQ schedulePageQueryREQ) {
+    public PageResult<ScheduleRES> EmployeePageQuery(SchedulePageQueryREQ schedulePageQueryREQ) {
         //参数校验
         if (schedulePageQueryREQ == null) {
             THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
+            return null;
         }
         //设置分页参数默认值
         if (schedulePageQueryREQ.getPage() <= 0) {
@@ -142,78 +181,106 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
         //创建查询条件
         LambdaQueryWrapper<ScheduleEO> queryWrapper = new LambdaQueryWrapper<>();
 
-        //处理出发时间
-        LocalDateTime startTime = schedulePageQueryREQ.getStartTime().withHour(0).withMinute(0).withSecond(0);
-        LocalDateTime startTimeX = schedulePageQueryREQ.getStartTime().withHour(23).withMinute(59).withSecond(59);
-        LocalDateTime endTime = schedulePageQueryREQ.getEndTime().withHour(0).withMinute(0).withSecond(0);
-        LocalDateTime endTimeX = schedulePageQueryREQ.getEndTime().withHour(23).withMinute(59).withSecond(59);
-
         //查询条件
-        queryWrapper.eq(ScheduleEO::getTrainId, schedulePageQueryREQ.getTrainId())
-                .eq(ScheduleEO::getRouteId, schedulePageQueryREQ.getRouteId())
-                .like(ScheduleEO::getConductor, schedulePageQueryREQ.getConductor())
-                //剩余座位数 TODO
-                .like(ScheduleEO::getAvailingTickets, schedulePageQueryREQ.getAvailingTickets())
-                .between(ScheduleEO::getStartTime, startTime, startTimeX)
-                .between(ScheduleEO::getEndTime, endTime, endTimeX);
+        if (schedulePageQueryREQ.getId() != null) {
+            queryWrapper.eq(ScheduleEO::getId, schedulePageQueryREQ.getId());
+        }
+        if (schedulePageQueryREQ.getTrainId() != null) {
+            queryWrapper.eq(ScheduleEO::getTrainId, schedulePageQueryREQ.getTrainId());
+        }
+        if (schedulePageQueryREQ.getRouteId() != null) {
+            queryWrapper.eq(ScheduleEO::getRouteId, schedulePageQueryREQ.getRouteId());
+        }
+        if (StrUtil.isNotBlank(schedulePageQueryREQ.getConductor())) {
+            queryWrapper.like(ScheduleEO::getConductor, schedulePageQueryREQ.getConductor());
+        }
+        if (schedulePageQueryREQ.getStartTime() != null) {
+            LocalDateTime startTime = schedulePageQueryREQ.getStartTime().withHour(0).withMinute(0).withSecond(0);
+            LocalDateTime startTimeX = schedulePageQueryREQ.getStartTime().withHour(23).withMinute(59).withSecond(59);
+            queryWrapper.between(ScheduleEO::getStartTime, startTime, startTimeX);
+        }
+        if (schedulePageQueryREQ.getEndTime() != null) {
+            LocalDateTime endTime = schedulePageQueryREQ.getEndTime().withHour(0).withMinute(0).withSecond(0);
+            LocalDateTime endTimeX = schedulePageQueryREQ.getEndTime().withHour(23).withMinute(59).withSecond(59);
+            queryWrapper.between(ScheduleEO::getEndTime, endTime, endTimeX);
+        }
 
         //执行分页查询
-        Page<ScheduleEO> schedulePage = scheduleMapper.selectPage(page, queryWrapper);
+        IPage<ScheduleEO> schedulePage = scheduleMapper.selectPage(page, queryWrapper);
+        List<ScheduleEO> records = schedulePage.getRecords();
 
-        //封装返回结果
-        PageResult<ScheduleEO> pageResult = new PageResult<>();
-        pageResult.setTotal(schedulePage.getTotal());
-        pageResult.setRecords(schedulePage.getRecords());
-        return pageResult;
-    }
-
-    @Override
-    public PageResult<ScheduleRES> UserPageQuery(SchedulePageQueryREQ schedulePageQueryREQ) {
-        //参数校验
-        if (schedulePageQueryREQ == null) {
-            THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
-        }
-
-        // 设置分页参数默认值
-        if (schedulePageQueryREQ.getPage() <= 0) {
-            schedulePageQueryREQ.setPage(1);
-        }
-        if (schedulePageQueryREQ.getPageSize() <= 0) {
-            schedulePageQueryREQ.setPageSize(10);
-        }
-
-        //创建分页对象
-        Page<ScheduleEO> page = new Page<>(schedulePageQueryREQ.getPage(), schedulePageQueryREQ.getPageSize());
-        //创建查询条件
-        LambdaQueryWrapper<ScheduleEO> queryWrapper = Wrappers.lambdaQuery();
-
-        //查询条件
-        queryWrapper.eq(ScheduleEO::getTrainId, schedulePageQueryREQ.getTrainId())
-                .eq(ScheduleEO::getRouteId, schedulePageQueryREQ.getRouteId())
-                .like(ScheduleEO::getConductor, schedulePageQueryREQ.getConductor())
-                //剩余座位数 TODO
-                .like(ScheduleEO::getAvailingTickets, schedulePageQueryREQ.getAvailingTickets())
-                .eq(ScheduleEO::getStartTime, schedulePageQueryREQ.getStartTime())
-                .eq(ScheduleEO::getEndTime, schedulePageQueryREQ.getEndTime());
-
-
-        //执行分页查询
-        Page<ScheduleEO> schedulePage = scheduleMapper.selectPage(page, queryWrapper);
-
+        List<Long> trainIds = records.stream().map(ScheduleEO::getTrainId).distinct().toList();
+        List<Long> routeIds = records.stream().map(ScheduleEO::getRouteId).distinct().toList();
+        List<TrainEO> trains = CollUtil.isEmpty(trainIds) ? Collections.emptyList() : trainMapper.selectBatchIds(trainIds);
+        List<RouteEO> routes = CollUtil.isEmpty(routeIds) ? Collections.emptyList() : routeMapper.selectBatchIds(routeIds);
+        Map<Long, String> trainNameMap = trains.stream()
+                .collect(Collectors.toMap(TrainEO::getId, TrainEO::getTrainName));
+        Map<Long, String> routeNameMap = routes.stream()
+                .collect(Collectors.toMap(RouteEO::getId, RouteEO::getRouteName));
         //将EO转换为RES
         List<ScheduleRES> resList = schedulePage.getRecords().stream()
                 .map(eo -> {
                     ScheduleRES res = new ScheduleRES();
                     BeanUtil.copyProperties(eo, res);
+                    res.setTrainName(trainNameMap.get(eo.getTrainId()));
+                    res.setRouteName(routeNameMap.get(eo.getRouteId()));
+                    res.setAvailableTickets(eo.getAvailableTickets());
                     return res;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         //封装返回结果
         PageResult<ScheduleRES> pageResult = new PageResult<>();
-        pageResult.setTotal(schedulePage.getTotal());
+        Long total = scheduleMapper.selectCount(Wrappers.lambdaQuery(ScheduleEO.class));
+        pageResult.setTotal(total > PAGE_TOTAL ? PAGE_TOTAL : total);
         pageResult.setRecords(resList);
-        return pageResult ;
+        return pageResult;
+    }
+
+    @Override
+    public RealTimeScheduleRES getSchedule(RealTimeScheduleREQ realTimeScheduleREQ) {
+        if (realTimeScheduleREQ == null) {
+            THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
+            return null;
+        }
+        ScheduleEO scheduleEO = self.getById(realTimeScheduleREQ.getScheduleId());
+
+        /**
+         * 站点ID查站名
+         */
+        String startStation = stationMapper.selectById(realTimeScheduleREQ.getStartStationId()).getStationName();
+        String endStation = stationMapper.selectById(realTimeScheduleREQ.getEndStationId()).getStationName();
+
+        /**
+         * 获取出发时间和到达时间
+         */
+        ReserveSeatDTO reserveSeatDTO = ReserveSeatDTO.builder()
+                .scheduleId(realTimeScheduleREQ.getScheduleId())
+                .startStationId(realTimeScheduleREQ.getStartStationId())
+                .endStationId(realTimeScheduleREQ.getEndStationId())
+                .build();
+        TimeDTO timeDTO = calculation.timeCalculation(reserveSeatDTO);
+
+        /**
+         * 计算票价
+         */
+        CalcTicketPriceDTO calcTicketPriceDTO = CalcTicketPriceDTO.builder()
+                .scheduleId(realTimeScheduleREQ.getScheduleId())
+                .startStationId(realTimeScheduleREQ.getStartStationId())
+                .endStationId(realTimeScheduleREQ.getEndStationId())
+                .build();
+        BigDecimal price = calculation.ticketPriceCalculation(calcTicketPriceDTO);
+
+
+        return RealTimeScheduleRES.builder()
+                .scheduleId(scheduleEO.getId())
+                .startTime(timeDTO.getStartStationTime())
+                .endTime(timeDTO.getEndStationTime())
+                .startStation(startStation)
+                .endStation(endStation)
+                .price(price)
+                .remainTicket(scheduleEO.getAvailableTickets())
+                .build();
     }
 
     private ScheduleEO getSchedule(Long trainId, Long routeId, LocalDateTime startTime){
@@ -237,14 +304,14 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
     /**外部调用*/
     public Integer getAvailingTickets(Long scheduleId){
         ScheduleEO scheduleEO = scheduleMapper.selectById(scheduleId);
-        return scheduleEO.getAvailingTickets();
+        return scheduleEO.getAvailableTickets();
     }
 
-    /**外部调用*/
     public PageResult<RealTimeScheduleRES> getRealTimeSchedule(RealTimeSchedulePageQueryREQ realTimeSchedulePageQueryREQ){
         //参数校验
         if (realTimeSchedulePageQueryREQ == null) {
             THE_QUERY_PARAMETER_CANNOT_BE_EMPTY.throwException();
+            return null;
         }
         //设置分页参数默认值
         if (realTimeSchedulePageQueryREQ.getPage() <= 0) {
@@ -273,33 +340,37 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
         //找出同时包含出发站和终点站的路线ID
         List<Long> startRouteIds = routeStationsStart.stream()
                 .map(RouteStationsEO::getRouteId)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Long> commonRouteIds = routeStationsEnd.stream()
                 .map(RouteStationsEO::getRouteId)
                 .filter(startRouteIds::contains)
-                .collect(Collectors.toList());
+                .toList();
 
         //处理出发时间
         LocalDateTime startTime = realTimeSchedulePageQueryREQ.getNowTime().withHour(0).withMinute(0).withSecond(0);
         LocalDateTime endTime = realTimeSchedulePageQueryREQ.getNowTime().withHour(23).withMinute(59).withSecond(59);
 
         //根据路线和出发时间查询班次
-        List<ScheduleEO> schedules = scheduleMapper.selectList(new LambdaQueryWrapper<ScheduleEO>()
-                .between(ScheduleEO::getStartTime, startTime, endTime)
-                .in(ScheduleEO::getRouteId, commonRouteIds));
+        Page<ScheduleEO> page = new Page<>(realTimeSchedulePageQueryREQ.getPage(), realTimeSchedulePageQueryREQ.getPageSize());
+        LambdaQueryWrapper<ScheduleEO> schedulequeryWrapper = new LambdaQueryWrapper<>();
+        schedulequeryWrapper.between(ScheduleEO::getStartTime, startTime, endTime)
+                .in(ScheduleEO::getRouteId, commonRouteIds);
+
+        IPage<ScheduleEO> schedules = scheduleMapper.selectPage(page, schedulequeryWrapper);
+        List<ScheduleEO> records = schedules.getRecords();
 
         //每个班次都封装出一个实时班次响应
-        List<RealTimeScheduleRES> resList = schedules.stream()
+        List<RealTimeScheduleRES> resList = records.stream()
                 .map(schedule -> {
                     RealTimeScheduleRES res = new RealTimeScheduleRES();
                     //计算时间
-                    Calculation calculation = new Calculation();
-                    ReserveSeatDTO ReserveSeatDTO = new ReserveSeatDTO(
-                            schedule.getId(),
-                            realTimeSchedulePageQueryREQ.getStartStationId(),
-                            realTimeSchedulePageQueryREQ.getEndStationId());
-                    TimeDTO timeDTO = calculation.timeCalculation(ReserveSeatDTO);
+                    ReserveSeatDTO reserveSeatDTO = ReserveSeatDTO.builder()
+                            .scheduleId(schedule.getId())
+                            .startStationId(realTimeSchedulePageQueryREQ.getStartStationId())
+                            .endStationId(realTimeSchedulePageQueryREQ.getEndStationId())
+                            .build();
+                    TimeDTO timeDTO = calculation.timeCalculation(reserveSeatDTO);
                     //计算价格
                     BigDecimal price = calculation.ticketPriceCalculation(new CalcTicketPriceDTO(
                             schedule.getId(),
@@ -312,20 +383,14 @@ public class IScheduleServiceImpl extends ServiceImpl<ScheduleMapper, ScheduleEO
                     res.setEndTime(timeDTO.getEndStationTime());
                     res.setStartStation(startStation);
                     res.setEndStation(endStation);
-                    res.setRemainTicket(schedule.getAvailingTickets());
+                    res.setRemainTicket(schedule.getAvailableTickets());
                     return res;
-                }).collect(Collectors.toList());
-
-        // 将最终的结果转换为分页对象
-        Page<RealTimeScheduleRES> page = new Page<>(realTimeSchedulePageQueryREQ.getPage(), realTimeSchedulePageQueryREQ.getPageSize(), resList.size());
-        // 手动设置当前页的记录
-        int fromIndex = (int) ((page.getCurrent() - 1) * page.getSize());
-        int toIndex = (int) Math.min(fromIndex + page.getSize(), resList.size());
-        page.setRecords(resList.subList(fromIndex, toIndex));
+                }).toList();
 
         PageResult<RealTimeScheduleRES> pageResult = new PageResult<>();
-        pageResult.setTotal(resList.size());
-        pageResult.setRecords(page.getRecords());
+        Long total = scheduleMapper.selectCount(Wrappers.lambdaQuery(ScheduleEO.class));
+        pageResult.setTotal(total > PAGE_TOTAL ? PAGE_TOTAL : total);
+        pageResult.setRecords(resList);
         return pageResult;
     }
 
